--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <div class="container">
 
             <header>
-                <h1>freeCodeCamp Survey Form</h1>
-                <p>Thank you for taking the time to help us improve the platform</p>
+                <h1 id="title">freeCodeCamp Survey Form</h1>
+                <p id="description">Thank you for taking the time to help us improve the platform</p>
             </header>
 
 
@@ -30,8 +30,8 @@
                 </div>
 
                 <div class="form-group">
-                    <label id="age-label" for="age">Age (optional)</label>
-                    <input type="text" id="age" placeholder="Enter your age" required>
+                    <label id="number-label" for="age">Age (optional)</label>
+                    <input min="1" max="1000" type="number" id="number" placeholder="Enter your age" required>
                 </div>
 
                 <div class="form-group">
